# se-toolkit-lab-8

./: .gitmodules  REPORT.md  docker-compose.yml
caddy/: Caddyfile
mcp/: pyproject.toml
mcp/mcp_observability/: __init__.py  __main__.py  server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
