[project]
name = "nanobot"
version = "0.1.0"
description = "Nanobot agent for LMS"
requires-python = ">=3.14"
dependencies = [
    "nanobot>=0.1.0",
    "nanobot-webchat",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nanobot-webchat = { path = "../nanobot-websocket-channel" }
